@@ -2,38 +2,41 @@ package com.taxi_brousse.controller;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.taxi_brousse.dto.PubliciteDTO;
-import com.taxi_brousse.entity.Publicite;
 import com.taxi_brousse.repository.PubliciteRepository;
+import com.taxi_brousse.service.PubliciteService;
 
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 
 @RestController
 @RequestMapping("/api/publicites")
 @RequiredArgsConstructor
 public class PubliciteController {
-    
     private final PubliciteRepository publiciteRepository;
+    private final PubliciteService publiciteService;
     
     /**
      * Récupère toutes les publicités actives
      */
     @GetMapping("/actives")
     public ResponseEntity<List<PubliciteDTO>> getPublicitesActives() {
-        List<Publicite> publicites = publiciteRepository.findByActifTrue();
-        List<PubliciteDTO> dtos = publicites.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(publiciteService.findAll().stream()
+            .filter(p -> Boolean.TRUE.equals(p.getActif()))
+            .toList());
     }
     
     /**
@@ -43,11 +46,9 @@ public class PubliciteController {
     public ResponseEntity<List<PubliciteDTO>> getPublicitesValides(
             @RequestParam(required = false) String date) {
         LocalDate dateRecherche = (date != null) ? LocalDate.parse(date) : LocalDate.now();
-        List<Publicite> publicites = publiciteRepository.findValidesADate(dateRecherche);
-        List<PubliciteDTO> dtos = publicites.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(publiciteRepository.findValidesADate(dateRecherche).stream()
+            .map(p -> publiciteService.findById(p.getId()))
+            .toList());
     }
     
     /**
@@ -55,27 +56,32 @@ public class PubliciteController {
      */
     @GetMapping("/{id}")
     public ResponseEntity<PubliciteDTO> getById(@PathVariable Long id) {
-        Publicite publicite = publiciteRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Publicité non trouvée"));
-        return ResponseEntity.ok(toDTO(publicite));
+        return ResponseEntity.ok(publiciteService.findById(id));
     }
-    
-    /**
-     * Convertit une entité en DTO
-     */
-    private PubliciteDTO toDTO(Publicite entity) {
-        PubliciteDTO dto = new PubliciteDTO();
-        dto.setId(entity.getId());
-        dto.setCode(entity.getCode());
-        dto.setTitre(entity.getTitre());
-        dto.setDescription(entity.getDescription());
-        dto.setUrlVideo(entity.getUrlVideo());
-        dto.setDureeSecondes(entity.getDureeSecondes());
-        dto.setDateDebutValidite(entity.getDateDebutValidite());
-        dto.setDateFinValidite(entity.getDateFinValidite());
-        dto.setActif(entity.getActif());
-        dto.setSocietePublicitaireId(entity.getSocietePublicitaire().getId());
-        dto.setSocietePublicitaireNom(entity.getSocietePublicitaire().getNom());
-        return dto;
+
+    @GetMapping
+    public ResponseEntity<List<PubliciteDTO>> getAll() {
+        return ResponseEntity.ok(publiciteService.findAll());
+    }
+
+    @GetMapping("/societe/{societeId}")
+    public ResponseEntity<List<PubliciteDTO>> getBySociete(@PathVariable Long societeId) {
+        return ResponseEntity.ok(publiciteService.findBySocieteId(societeId));
+    }
+
+    @PostMapping
+    public ResponseEntity<PubliciteDTO> create(@Valid @RequestBody PubliciteDTO dto) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(publiciteService.create(dto));
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<PubliciteDTO> update(@PathVariable Long id, @Valid @RequestBody PubliciteDTO dto) {
+        return ResponseEntity.ok(publiciteService.update(id, dto));
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
+        publiciteService.delete(id);
+        return ResponseEntity.noContent().build();
     }
 }
